# common-workflow-schemas

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example.ipynb  relax.ipynb
schemas/: composite.py  dissociation.py  engine.py  eos.py  relax.py  utils.py
src/common_workflow_schemas/common/: context.py  field.py  mixins.py  serializers.py
src/common_workflow_schemas/common/serializers/: structure.py
src/common_workflow_schemas/common/types/: __init__.py  identifier.py  numeric.py  process.py
src/common_workflow_schemas/schemas/: code.py  composite.py  dissociation.py  engine.py  eos.py  relax.py
src/common_workflow_schemas/utils/: printers.py
